# space-destroyer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  block.cpp  block.h  bullet.cpp  bullet.h  game.cpp  game.h  hello.cpp  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h
src/: alien.cpp  alien.h  block.cpp  block.h  bullet.cpp  bullet.h  game.cpp  game.h  main.cpp  mysteryShip.cpp  mysteryShip.h  obstacle.cpp  obstacle.h  player.cpp  player.h
